Sun Feb 13 19:41:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit.rb (Test::Unit::RequireFiles#non_options): skip
	  test suites failed to load instead of mere messages.

Sun Feb 13 09:56:44 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/openssl/test_config.rb (OpenSSL#test_freeze): fix error
	  message assertion.

	* test/io/nonblock/test_flush.rb (TestIONonblock#flush_test):
	  return true to finish the test.

	* test/syck/test_string.rb (Syck::TestString#test_non_binary_string):
	  use assert_not instead of refute, unless required minitest
	  explicitly.

	* test/test_prime.rb (TestPrime::sieve.Integer): ditto.

	* test/xmlrpc/webrick_testing.rb (WEBrick_Testing#start_server):
	  catch IOError when server socket was closed.

Sun Feb 13 07:39:51 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (enum_inject): typo fixed. a patch from Gaku Ueda in
	  [ruby-core:35216].

Sun Feb 13 00:48:47 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb (Date#===): [ruby-core:35127]

Sun Feb 13 00:29:18 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit.rb (Test::Unit::Options#process_args): always
	  return options.

	* lib/test/unit.rb (Test::Unit::RequireFiles#non_options): return
	  if any test case get loaded.

	* lib/test/unit.rb (Test::Unit::AutoRunner#initialize): do not add
	  default directory if it is nil.

	* lib/test/unit.rb (Test::Unit::AutoRunner#process_args): return
	  true if any test cases to run.

Sat Feb 12 23:17:43 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit.rb (assert_include): add alias.

Sat Feb 12 14:44:20 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_io_blocking_region): new function to run
	  blocking region with GIL released, for fd.

	* thread.c (rb_thread_fd_close): implement.  [ruby-core:35203]

	* vm.c (th_init): rename from th_init2.

Sat Feb 12 14:41:36 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
