@@ -1,3 +1,7 @@
+Mon Feb 14 07:34:55 2011  Tanaka Akira  <akr@fsij.org>
+
+	* ext/curses/curses.c: parenthesize macro arguments.
+
 Sun Feb 13 19:41:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/test/unit.rb (Test::Unit::RequireFiles#non_options): skip
